# InstrumentRecognizer

./: CMakeLists.txt  License.txt  Readme.html  Readme.md
Executor/: CMakeLists.txt
Executor/include/: ClassifierDBManagerInitialization.h  ClassifierFactoryInitialization.h  ClassifierObserversInitialization.h  ClassifierTesterInitialization.h  Configuration.h  DataDBManagerInitialization.h  DescriberFactoryInitialization.h  DescriptionDBManagerInitialization.h  ReportBuilderInitialization.h  ReportDBManagerInitialization.h
Executor/src/: Application.cpp  ClassifierDBManagerInitialization.cpp  ClassifierFactoryInitialization.cpp  ClassifierObserversInitialization.cpp  ClassifierTesterInitialization.cpp  Configuration.cpp  DataDBManagerInitialization.cpp  DescriberFactoryInitialization.cpp  DescriptionDBManagerInitialization.cpp  ReportBuilderInitialization.cpp  ReportDBManagerInitialization.cpp  main.cpp
InstrumentRecognizer/: CMakeLists.txt
InstrumentRecognizer/include/: AttributeCombinations.h  Classifier.h  ClassifierDBManager.h  ClassifierFactory.h  ClassifierObservers.h  ClassifierOverlord.h  ClassifierResults.h  ClassifierTesters.h  ClassifierVisitor.h  CoderTraits.h  CompositeDiscretizer.h  ConverterTraits.h  DataDBManager.h  Describer.h  DescriberFactory.h  DescriberOverlord.h  DescriptionDBManager.h  Discretizer.h  DiscretizerFactory.h  EnsembleClassifier.h  EqualFrequencyDiscretizer.h  EqualSizeDiscretizer.h  GaussianClassifier.h  GeneralClassifierDataObserver.h  ILAClassifier.h  ILADescription.h  ILARule.h  LASSOClassifier.h  LinearClassifier.h  NaiveBayesClassifier.h  NearestNeighborClassifier.h  NearestNeighborsStrategies.h  OwnNearestNeighborClassifier.h  RandomClassifier.h  RandomServer.h  Report.h  ReportBuilder.h  ReportDBManager.h  Reporter.h  SharkAdaptor.h  (+6 more)
InstrumentRecognizer/src/: AttributeCombinations.cpp  Classifier.cpp  ClassifierDBManager.cpp  ClassifierFactory.cpp  ClassifierObservers.cpp  ClassifierOverlord.cpp  ClassifierResults.cpp  ClassifierTesters.cpp  DataDBManager.cpp  Describer.cpp  DescriberFactory.cpp  DescriberOverlord.cpp  DescriptionDBManager.cpp  Discretizer.cpp  DiscretizerFactory.cpp  EnsembleClassifier.cpp  EqualFrequencyDiscretizer.cpp  EqualSizeDiscretizer.cpp  GaussianClassifier.cpp  GeneralDataClassifierObserver.cpp  ILAClassifier.cpp  ILARule.cpp  LASSOClassifier.cpp  LinearClassifier.cpp  NaiveBayesClassifier.cpp  NearestNeighborClassifier.cpp  OwnNearestNeighborClassifier.cpp  RandomClassifier.cpp  RandomServer.cpp  Report.cpp  ReportBuilder.cpp  ReportDBManager.cpp  SharkClassifiers.cpp  SharkCoders.cpp  SharkConverters.cpp  TimeServer.cpp  TrivialDiscretizer.cpp
InstrumentRecognizerTester/: CMakeLists.txt
InstrumentRecognizerTester/mocks/: ClassifierDBManagerMock.hpp  ClassifierFactoryMock.hpp  ClassifierMock.hpp  ClassifierObserverMock.hpp  DataDBManagerMock.hpp  DescriberFactoryMock.hpp  DescriberMock.hpp  DescriptionDBManagerMock.hpp  RandomServerMock.hpp  ReportBuilderMock.hpp  ReportDBManagerMock.hpp  TimeServerMock.h
InstrumentRecognizerTester/src/: AttributeCombinationsTester.cpp  ClassifierDBManagerTester.cpp  ClassifierFactoryTester.cpp  ClassifierObserversTester.cpp  ClassifierOverlordTester.cpp  ClassifierTester.cpp  CodersTester.cpp  ConvertersTester.cpp  DataDBManagerTester.cpp  DescriberFactoryTester.cpp  DescriberOverlordTester.cpp  DescriberTester.cpp  DescriptionDBManagerTester.cpp  DiscretizerTester.cpp  ExampleClassDescriptions.cpp  ExampleClassDescriptions.hpp  ILAClassifierTester.cpp  NaiveBayesClassifierTester.cpp  ReportDBManagerTester.cpp  ReportTester.cpp  SharkAdaptorTester.cpp  TesterTester.cpp  XmlParserTester.cpp  main.cpp
InstrumentRecognizerTester/test_files/descriptions/: className1.descr  className2.descr
InstrumentRecognizerTester/test_files/mp7/bassoon/: 1953_bassoon_034_1_6_1.mp7
InstrumentRecognizerTester/test_files/mp7/viola/: 1002_viola_055_3_10_107.mp7
InstrumentRecognizerTester/test_files/mp7_modified/bassoon/: 1953_bassoon_034_1_6_1_modified.mp7
InstrumentRecognizerTester/test_files/single_file/: one.txt
InstrumentRecognizerTester/test_files/single_file_and_single_directory/: one.txt
InstrumentRecognizerTester/test_files/single_file_and_single_directory/internal/: second_hidden.txt
InstrumentRecognizerTester/test_files/tree_root/tricky_dir/: four.txt
InstrumentRecognizerTester/test_files/tricky_dir/: two.txt
PugiXML/: CMakeLists.txt
XMLSchemas/: classifier.xsd
