CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(Recognizer)

SET(PUGIXML_INCLUDE_DIR ../PugiXML/)
SET(INSTRUMENT_RECOGNIZER_INCLUDE_DIR ../InstrumentRecognizer/include)
SET(RECOGNIZED_INCLUDE_DIR include)

FILE (GLOB SOURCES src/*.cpp)
FILE (GLOB HEADERS include/*.h)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${INSTRUMENT_RECOGNIZER_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RECOGNIZED_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SHARK_INCLUDE})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${SHARK_LIBRARIES})

ADD_EXECUTABLE(Recognizer ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(Recognizer InstrumentRecognizer PugiXML ${Boost_Libraries} ${SHARK_LIB})