CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(InstrumentRecognizer)

SET(PUGIXML_INCLUDE_DIR ../PugiXML/)
SET(INSTRUMENT_RECOGNIZER_INCLUDE_DIR include)

FILE (GLOB HEADERS INSTRUMENT_RECOGNIZER_INCLUDE_DIR/*.h)
FILE (GLOB SOURCES src/*.cpp)

#SOURCE_GROUP(Describers FILES src/Describers/*.cpp)
#SOURCE_GROUP(DBManagers FILES src/DBManagers/*.cpp)
#SOURCE_GROUP(Classifiers FILES src/Classifiers/*.cpp)
#SOURCE_GROUP(Testers FILES src/Testers/*.cpp)
#SOURCE_GROUP(Utilities FILES src/Utilities/*.cpp)

INCLUDE_DIRECTORIES(${SHARK_LIBRARIES})

INCLUDE_DIRECTORIES(${SHARK_INCLUDE})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${SHARK_LIBRARIES})

ADD_LIBRARY(InstrumentRecognizer ${SOURCES} ${HEADERS})