CMAKE_MINIMUM_REQUIRED(VERSION 2.8.1)
CMAKE_POLICY(VERSION 2.8.1)

PROJECT(InstrumentRecognizerTester)

SET(PUGIXML_INCLUDE_DIR ../PugiXML/)
SET(INSTRUMENT_RECOGNIZER_INCLUDE_DIR ../InstrumentRecognizer/include)
SET(INSTRUMENT_RECOGNIZER_TESTER_INCLUDE_DIR .)

FILE (GLOB HEADERS */*.hpp)
FILE (GLOB SOURCES src/*.cpp helpers/*.cpp)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${PUGIXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${INSTRUMENT_RECOGNIZER_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${INSTRUMENT_RECOGNIZER_TESTER_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${SHARK_INCLUDE})

IF(NOT DEFINED TURTLE_ROOT)
    SET(TURTLE_ROOT $ENV{TURTLE_ROOT})
ENDIF()

IF(NOT DEFINED TURTLE_ROOT)
  MESSAGE(FATAL_ERROR "Could not find TURTLE_ROOT."
  "You need to set TURTLE_ROOT environment variable to path where Turtle Mock is installed. "
  "Turtle Mock can be downloaded for free from http://turtle.sourceforge.net/") 
ENDIF()
MESSAGE("Found Turtle Mock in: " ${TURTLE_ROOT})

INCLUDE_DIRECTORIES(${TURTLE_ROOT})

LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
LINK_DIRECTORIES(${SHARK_LIBRARIES})

ADD_EXECUTABLE(Tests ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(Tests InstrumentRecognizer PugiXML ${Boost_Libraries} ${SHARK_LIB})